hopefully fixing weird spacing nav issue

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -21,7 +21,7 @@
   }
 
   .share-placeholder aside{
-    margin-bottom: 5em;
+  //  margin-bottom: 5em;
   }
 
   // NAV default styles
